# proyecto-tajamar

./: gasto.py  main.py  pyproject.toml  test_gastos.py
