[project]
name = "proyecto-tajamar"
version = "0.1.0"
description = "Lista de gastos"
authors = [
    {name = "Manish Soneji",email = "manish.soneji@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
